network/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  labels:
    gateway.networking.k8s.io/gateway-name: cilium-cluster-gateway
spec:
  addresses:
  - type: IPAddress
    value: ${INFRA_LB_IP}
  gatewayClassName: cilium
  listeners:
  - name: https
    hostname: "*.${INFRA_DOMAIN}"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: domain-tls-secret
    allowedRoutes:
      namespaces:
        from: All
